--- a/src/app/components/thread/thread.component.html
+++ b/src/app/components/thread/thread.component.html
@@ -1,3 +1,8 @@
+<div class="subject">
+  <div *ngIf="data" class="title">subject:
+    {{data.subject}}
+  </div>
+</div>
 <p>
   thread works!
   thread by id: {{id}}
