--- a/src/app/components/company/company.component.scss
+++ b/src/app/components/company/company.component.scss
@@ -1,3 +1,32 @@
 .collapse.in {
   display: block!important;
 }
+
+li.nav-link.text-white.text-uppercase  {
+  color: white!important;
+  display: inline-block;
+  position: relative;
+  padding: 0;
+  line-height: 1;
+  margin-bottom: 10px;
+  .company-name {
+    width: 80%;
+    line-height: 1;
+    padding-top: 10px;
+    padding-left: 10px;
+  }
+  i {
+    width: 20%;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    text-align: right;
+  }
+  &:hover {
+    cursor: pointer;
+    color: whitesmoke!important;
+  }
+  &.active {
+    color: white!important;
+  }
+}
