--- a/src/app/components/company/company.component.html
+++ b/src/app/components/company/company.component.html
@@ -8,16 +8,16 @@
 <ul *ngFor="let company of companies; let i = index" data-toggle="collapse" [attr.data-target]="'#company-'+company.id"
     class="nav nav-pills flex-column companies-list">
   <li
-    [class]="(panel == company.id) ? 'nav-link text-white text-uppercase active' : 'nav-link text-white text-uppercase'"
+    [class]="(companyId == company.id) ? 'nav-link text-white text-uppercase active' : 'nav-link text-white text-uppercase'"
     (click)="selectCompany(company)"><div class="company-name" [routerLink]="['/chat/company/'+company.id]">
     {{company.name}}</div>
-    <i *ngIf="panel == company.id" class="glyphicon glyphicon-minus"></i>
-    <i *ngIf="panel != company.id" class="glyphicon glyphicon-plus"></i>
+    <i *ngIf="companyId == company.id" class="glyphicon glyphicon-minus"></i>
+    <i *ngIf="companyId != company.id" class="glyphicon glyphicon-plus"></i>
   </li>
 </ul>
 </span>
 
-<!--<app-company-thread *ngIf="panel" [activeThread]="activeThread"-->
-<!--[class]="(panel == company.id) ? 'collapse in' : 'collapse'"-->
-<!--[attr.aria-expanded]="panel == company.id ? true : false" id="'#company-'{{company.id}}"-->
-<!--[threads]="company.threads"></app-company-thread>-->
+<app-company-thread *ngIf="!openSelectCompanyStatus && company" [activeThread]="activeThread"
+                    [class]="(company.id == company.id) ? 'collapse in' : 'collapse'"
+                    [attr.aria-expanded]="company.id == company.id ? true : false" id="'#company-'{{company.id}}"
+                    [company]="company" [threads]="company.threads"></app-company-thread>
