--- a/src/app/components/company-thread/company-thread.component.html
+++ b/src/app/components/company-thread/company-thread.component.html
@@ -1,7 +1,11 @@
-<li *ngFor="let thread of threads" class="nav-item">
-  <a [routerLink]="['/chat/threads/', thread.id]" (click)="changeActiveThreadId(thread.id)" [class]="(activeThreadId == thread.id) ? 'header nav-link pull-left active' : 'header nav-link pull-left'">
+<span *ngIf="company && threads">
+<li *ngFor="let thread of threads" class="thread-item nav-item">
+  <a [routerLink]="['/chat/company/'+company.id+'/threads/', thread.id]"
+     (click)="changeActiveThreadId(thread.id)"
+     [class]="(activeThreadId == thread.id) ? 'header nav-link pull-left active' : 'header nav-link pull-left'">
     <i *ngIf="activeThreadId == thread.id" class="glyphicon glyphicon-ok-circle"></i>
     <i *ngIf="activeThreadId != thread.id" class="glyphicon glyphicon-ok-circle"></i> {{thread.subject}}
     <span class="sr-only">(current)</span>
   </a>
 </li>
+</span>
