--- a/src/app/components/company-thread/company-thread.component.scss
+++ b/src/app/components/company-thread/company-thread.component.scss
@@ -1,3 +1,7 @@
+.thread-item {
+  list-style-type: none;
+}
+
 .header.nav-link.pull-left {
   padding: .5rem 1.25rem;
   color: rgb(202, 196, 201);
