--- a/src/app/components/company/company.component.scss
+++ b/src/app/components/company/company.component.scss
@@ -31,7 +31,7 @@ li.nav-link.text-white.text-uppercase  {
   }
 }
 .company-name {
-  font-size: 1rem!important;
+  font-size: 1.1rem!important;
   color: #aaaaaa;
 }
 .companies-list-toggle {
@@ -40,8 +40,9 @@ li.nav-link.text-white.text-uppercase  {
   border: none;
   font-weight: 600;color: white;
   border-bottom: 1px solid;
-  padding-left: 10px;
+  padding-left: 20px;
   width: 100%;
+  text-align: left;
 }
 .companies-list-container {
   position: relative;
