fix for sidebar list ordering

--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -15,10 +15,14 @@
 }
 
 .content-chat {
-  background: #cccccc;
-  margin-left: 10% !important;
+  background: #eeeeee;
+  //margin-left: 10% !important;
 }
 
 body > app-root > div > app-chat > div > app-chat-inner > div > app-chat > div > app-chat-sidebar {
   display: none;
+}
+
+.content-chat {
+  margin-top: 50px;
 }
