--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,4 +1,4 @@
 <div class="row">
   <app-chat-sidebar class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar sidebar-chat"></app-chat-sidebar>
-  <app-chat-inner class="col-sm-9 ml-sm-auto col-md-10 pt-3 content-chat"></app-chat-inner>
+  <app-thread class="col-sm-9 ml-sm-auto col-md-10 pt-3 content-chat"></app-thread>
 </div>
