--- a/src/app/components/company/company.component.html
+++ b/src/app/components/company/company.component.html
@@ -1,6 +1,6 @@
 <button class="companies-list-toggle" (click)="openSelectCompany()">
   <i class="glyphicon glyphicon-briefcase"></i>
-  Select Company:
+  Company:
   <span *ngIf="company" class="company-name">{{company.name}}</span>
   <span *ngIf="!company" class="company-name">None</span>
 </button>
