--- a/src/app/components/thread/thread.component.html
+++ b/src/app/components/thread/thread.component.html
@@ -1,15 +1,16 @@
-<span *ngIf="data">
-<div class="subject">
-  <div class="title">subject:
-    {{data.subject}}
-  </div>
-</div>
-<p>
-  thread works!
-  thread by id: {{id}}
-</p>
-</span>
-
 <span *ngIf="!data">
   <h3 class="text-info">Please select a thread</h3>
+</span>
+<span *ngIf="data">
+<div class="content">
+  <div class="contact-profile">
+    <p>{{data.subject}}</p>
+    <div class="right-btns">
+      <i class="fa fa-facebook" aria-hidden="true"></i>
+      <i class="fa fa-twitter" aria-hidden="true"></i>
+      <i class="fa fa-instagram" aria-hidden="true"></i>
+    </div>
+  </div>
+  <app-thread-messages [thread]="data"></app-thread-messages>
+</div>
 </span>
