--- a/src/app/components/thread/thread.component.scss
+++ b/src/app/components/thread/thread.component.scss
@@ -1,3 +1,33 @@
 .content-chat {
   margin-top: 50px;
 }
+
+.content {
+  float: right;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  .contact-profile {
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background: #f5f5f5;
+  }
+  .contact-profile img {
+    width: 40px;
+    border-radius: 50%;
+    float: left;
+    margin: 9px 12px 0 9px;
+  }
+  .contact-profile p {
+    float: left;
+  }
+  .contact-profile .right-btns {
+    float: right;
+    i {
+      margin-left: 14px;
+      cursor: pointer;
+    }
+  }
+}
