--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -6,7 +6,9 @@
 <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
         <li class="nav-item" *ngIf="authenticated">
-            <a class="nav-link" [routerLink]="['/user']">Hello, {{user['name']}}</a>
+            <a class="nav-link" [routerLink]="['/user']">
+              <img class="img-user" [src]="user['avatar']"/>
+               {{user['name']}}</a>
         </li>
         <li class="nav-item" *ngIf="!authenticated">
             <a class="nav-link" [routerLink]="['/register']">Register</a>
