--- a/src/app/components/thread-message-input/thread-message-input.component.scss
+++ b/src/app/components/thread-message-input/thread-message-input.component.scss
@@ -3,6 +3,11 @@
   height: 60px;
   background: #f1f1f1;
   display: flex;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  padding-left: calc(16.666667% + 15px);
+  padding-right: 15px;
   i {
     color: #aaaaaa;
     text-align: center;
