--- a/src/app/components/thread-messages/thread-messages.component.scss
+++ b/src/app/components/thread-messages/thread-messages.component.scss
@@ -1,10 +1,9 @@
 .messages {
-  height: auto;
-  min-height: calc(100% - 120px);
-  max-height: calc(100% - 93px);
-  overflow-y: scroll;
-  overflow-x: hidden;
+  height: 100%;
   width: 100%;
+  margin-bottom: 120px;
+  margin-top: 60px;
+  background: white;
   ul li {
     display: inline-block;
     clear: both;
