--- a/src/app/components/thread/thread.component.scss
+++ b/src/app/components/thread/thread.component.scss
@@ -8,11 +8,16 @@
   height: 100%;
   overflow: hidden;
   position: relative;
+  display: inline-block;
   .contact-profile {
     width: 100%;
     height: 60px;
     line-height: 60px;
     background: #f5f5f5;
+    position: fixed;
+    top: 55px;
+    right: 0;
+    padding-left: calc(16.666667% + 15px);
   }
   .contact-profile img {
     width: 40px;
