chat message render

--- a/src/app/components/thread/thread.component.html
+++ b/src/app/components/thread/thread.component.html
@@ -11,6 +11,6 @@
       <i class="fa fa-instagram" aria-hidden="true"></i>
     </div>
   </div>
-  <app-thread-messages [thread]="data"></app-thread-messages>
+  <app-thread-messages [(thread)]="data"></app-thread-messages>
 </div>
 </span>
