--- a/src/app/components/thread-messages/thread-messages.component.html
+++ b/src/app/components/thread-messages/thread-messages.component.html
@@ -1,71 +1,12 @@
 <div class="messages">
-  <ul>
-    <li class="sent">
-      <img src="http://emilcarlsson.se/assets/mikeross.png" alt="">
-      <p>How the hell am I supposed to get a jury to believe you when I am not even sure that I do?!</p>
+  <ul *ngFor="let message of messages">
+    <li *ngIf="currentUser.id == message.user_id" class="replies">
+      <img src="{{message.user.avatar}}" alt="{{message.user.name}}">
+      <p>{{message.body}}</p>
     </li>
-    <li class="replies">
-      <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-      <p>When you're backed against the wall, break the god damn thing down.</p>
-    </li>
-    <li class="replies">
-      <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-      <p>Excuses don't win championships.</p>
-    </li>
-    <li class="sent">
-      <img src="http://emilcarlsson.se/assets/mikeross.png" alt="">
-      <p>Oh yeah, did Michael Jordan tell you that?</p>
-    </li>
-    <li class="replies">
-      <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-      <p>No, I told him that.</p>
-    </li>
-    <li class="replies">
-      <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-      <p>What are your choices when someone puts a gun to your head?</p>
-    </li>
-    <li class="sent">
-      <img src="http://emilcarlsson.se/assets/mikeross.png" alt="">
-      <p>What are you talking about? You do what they say or they shoot you.</p>
-    </li>
-    <li class="replies">
-      <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-      <p>Wrong. You take the gun, or you pull out a bigger one. Or, you call their bluff. Or, you do any one of a
-        hundred and forty six other things.</p>
-    </li>
-    <li class="sent">
-      <img src="http://emilcarlsson.se/assets/mikeross.png" alt="">
-      <p>How the hell am I supposed to get a jury to believe you when I am not even sure that I do?!</p>
-    </li>
-    <li class="replies">
-      <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-      <p>When you're backed against the wall, break the god damn thing down.</p>
-    </li>
-    <li class="replies">
-      <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-      <p>Excuses don't win championships.</p>
-    </li>
-    <li class="sent">
-      <img src="http://emilcarlsson.se/assets/mikeross.png" alt="">
-      <p>Oh yeah, did Michael Jordan tell you that?</p>
-    </li>
-    <li class="replies">
-      <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-      <p>No, I told him that.</p>
-    </li>
-    <li class="replies">
-      <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-      <p>What are your choices when someone puts a gun to your head?</p>
-    </li>
-    <li class="sent">
-      <img src="http://emilcarlsson.se/assets/mikeross.png" alt="">
-      <p>What are you talking about? You do what they say or they shoot you.</p>
-    </li>
-    <li class="replies">
-      <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-      <p>Wrong. You take the gun, or you pull out a bigger one. Or, you call their bluff. Or, you do any one of a
-        hundred and forty six other things.Hello here)) I'm really good at this!</p>
-
+    <li *ngIf="currentUser.id != message.user_id" class="sent">
+      <img src="{{message.user.avatar}}" alt="{{message.user.name}}">
+      <p>{{message.body}}</p>
     </li>
   </ul>
 </div>
