--- a/src/app/components/thread/thread.component.scss
+++ b/src/app/components/thread/thread.component.scss
@@ -18,6 +18,7 @@
     top: 55px;
     right: 0;
     padding-left: calc(16.666667% + 15px);
+    z-index: 1;
   }
   .contact-profile img {
     width: 40px;
