--- a/src/app/components/thread-messages/thread-messages.component.scss
+++ b/src/app/components/thread-messages/thread-messages.component.scss
@@ -11,6 +11,7 @@
     margin: 15px 15px 5px 15px;
     width: calc(100% - 25px);
     font-size: 0.9em;
+    position: relative;
     &.sent img {
       margin: 6px 8px 0 0;
     }
@@ -29,6 +30,13 @@
       border-radius: 20px;
       max-width: 205px;
       line-height: 130%;
+      position: relative;
+      .user-you {
+        position: absolute;
+        top: -16px;
+        left: 20px;
+        color: #435f7a;
+      }
     }
     &.replies img {
       float: right;
@@ -39,10 +47,13 @@
       border-radius: 50%;
       float: left;
     }
+    &.replies {
+    }
     &.replies p {
       background: #f5f5f5;
       float: right;
     }
+
   }
   @media screen and (min-width: 735px) {
     ul li p {
