--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
+<div id="body-elem">
 <app-navigation class="navbar navbar-expand-lg navbar-dark navbar-fixed-top fixed-top bg-primary"
                 [(userChange)]="userChange"></app-navigation>
 <div class="container-fluid">
-  <router-outlet (userChange)="userChange"></router-outlet>
+    <router-outlet (userChange)="userChange"></router-outlet>
+</div>
 </div>
