--- a/src/app/components/thread-messages/thread-messages.component.scss
+++ b/src/app/components/thread-messages/thread-messages.component.scss
@@ -1,9 +1,11 @@
 .messages {
   height: 100%;
-  width: 100%;
+  width: 60%;
+  padding-left: 10%;
   margin-bottom: 120px;
   margin-top: 60px;
   background: white;
+  display: block;
   ul li {
     display: inline-block;
     clear: both;
@@ -53,11 +55,39 @@
       background: #f5f5f5;
       float: right;
     }
-
+    .msg-body {
+      word-wrap: break-word;
+    }
   }
+  @media screen and (max-width: 735px) {
+    ul li p {
+      max-width: 500px;
+    }
+    width: 100%;
+    padding-left: 0;
+  }
+
   @media screen and (min-width: 735px) {
     ul li p {
-      max-width: 300px;
+      max-width: 500px;
     }
+    width: 80%;
+    padding-left: 0;
+  }
+
+  @media screen and (min-width: 980px) {
+    ul li p {
+      max-width: 500px;
+    }
+    width: 80%;
+    padding-left: 0;
+  }
+
+  @media screen and (min-width: 1280px) {
+    ul li p {
+      max-width: 600px;
+    }
+    width: 70%;
+    padding-left: 0;
   }
 }
