chat emojis esc keyup

--- a/src/app/components/thread-message-input/thread-message-input.component.html
+++ b/src/app/components/thread-message-input/thread-message-input.component.html
@@ -1,5 +1,5 @@
 <app-emojis [(visibleEmoji)]="visibleEmojis" [(selectedIcon)]="selectedIcon"
-            (triggerSelectedIcon)="iconChanged($event)"></app-emojis>
+            (triggerSelectedIcon)="iconChanged($event)" (triggerVisibleEmoji)="switchEmoji($event)"></app-emojis>
 <form class="wrap-message" *ngIf="model" [formGroup]="msgForm" role="form" name="form"
       (ngSubmit)="msgForm.valid && send()" novalidate>
     <app-control-messages [control]="msgForm.controls.msg"></app-control-messages>
@@ -7,7 +7,7 @@
     <fa name="microphone" class="fa-lg microphone-icon" aria-hidden="true"></fa>
     <div class="form-group message"
          [ngClass]="{ 'has-error': msgForm.submitted && !msg.valid }">
-        <input type="text" class="form-control input-message"
+        <input (keyup.esc)="closeMsg($event)" type="text" class="form-control input-message"
                name="msg" [(ngModel)]="model.msg" formControlName="msg" placeholder="Write your message..."/>
         <!--<div *ngIf="f.submitted && !msg.valid" class="help-block">Msg is required</div>-->
     </div>
