--- a/src/app/components/thread/thread.component.scss
+++ b/src/app/components/thread/thread.component.scss
@@ -9,6 +9,7 @@
   overflow: hidden;
   position: relative;
   display: inline-block;
+  padding-bottom: 150px;
   .contact-profile {
     width: 100%;
     height: 60px;
