--- a/src/app/components/user-edit/user-edit.component.html
+++ b/src/app/components/user-edit/user-edit.component.html
@@ -1,8 +1,20 @@
 <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" class="row" novalidate>
+  <div class="form-group d-flex w-100" formGroupName="user" novalidate>
+    <div class="col-6">
+      <label for="email">Ваш Email</label>
+      <input class="form-control" formControlName="email"/>
+    </div>
+    <div class="col-6">
+      <label for="name">Ваше  Ім'я</label>
+      <input class="form-control" formControlName="name"/>
+    </div>
+  </div>
   <div class="form-group d-flex w-100">
     <div class="col-12">
-      <label for="trend1">Ваша основна професія</label>
-      <input class="form-control" type="text" formControlName="position"/>
+      <label for="trends">Ваші напрямки(не більше 3-х і перший ваш основний)</label>
+      <ngx-select-dropdown formControlName="selectedTrends" [(ngModel)]="profile.selectedTrends" [options]="trends"
+                           [config]="selectConfig"
+                           [multiple]="true"></ngx-select-dropdown>
     </div>
   </div>
   <div class="form-group d-flex w-100" novalidate>
@@ -12,38 +24,23 @@
   </div>
   <div class="form-group d-flex w-100" formGroupName="links" novalidate>
     <div class="col-6">
-      <label for="website">Website</label>
+      <label for="website">Ваш сайт</label>
       <input class="form-control" formControlName="website"/>
     </div>
     <div class="col-6">
-      <label for="workprofile">Workprofile</label>
+      <label for="workprofile">Робочий профіль</label>
       <input class="form-control" formControlName="workprofile"/>
-    </div>
-  </div>
-  <div class="form-group d-flex w-100">
-    <div class="col-4">
-      <label for="trend1">Ваше перше направлення</label>
-      <input class="form-control" formControlName="trend1"/>
-      <select name="" id=""></select>
-    </div>
-    <div class="col-4">
-      <label for="trend2">Ваше друге направлення</label>
-      <input class="form-control" formControlName="trend2"/>
-    </div>
-    <div class="col-4">
-      <label for="trend3">Ваше третє направлення</label>
-      <input class="form-control" formControlName="trend3"/>
     </div>
   </div>
   <div class="form-group d-flex w-100">
     <div class="col-12">
       <label for="description">Ваша біографія</label>
-      <textarea class="form-control" formControlName="description"></textarea>
+      <textarea class="form-control" formControlName="description" style="min-height: 200px;"></textarea>
     </div>
   </div>
   <div class="form-group d-flex w-100">
     <div class="col-6">
-      <label for="experience">Ваше досвід(в роках)</label>
+      <label for="experience">Ваш досвід(в роках)</label>
       <input class="form-control" type="number" formControlName="experience"/>
     </div>
     <div class="col-6">
@@ -51,8 +48,12 @@
       <input class="form-control" type="number" formControlName="hour_rate"/>
     </div>
   </div>
-  <button class="btn btn-lg btn-success" type="submit" [disabled]="profileForm.pristine">Save</button>
-  <button class="btn btn-lg" type="reset" (click)="revert()" [disabled]="profileForm.pristine">
-    Revert
-  </button>
+  <div class="form-group d-flex w-100">
+    <div class="col-12">
+      <button class="btn btn-lg btn-success" type="submit" [disabled]="profileForm.pristine">Зберегти</button>
+      <button class="btn btn-lg" (click)="cancel()" [disabled]="profileForm.pristine">
+        Відмінити
+      </button>
+    </div>
+  </div>
 </form>
